# Lista-Spesa

./: CMakeLists.txt  Observer.h  Product.h  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  ObserverTest.cpp  ProductTest.cpp  ShoppingListFixture.cpp  UserFixture.cpp  run_all_tests.cpp
